# matrix-schema

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  config.public.mk  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
AgentTypeEnum/: index.html
AttributeTypeEnum/: index.html
Boolean/: index.html
CurationTypeEnum/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DiseaseListEntry/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
KnowledgeLevelEnum/: index.html
MatrixDiseaseList/: index.html
MatrixEdge/: index.html
MatrixEdgeCollection/: index.html
MatrixEdgeList/: index.html
MatrixNode/: index.html
MatrixNodeCollection/: index.html
MatrixNodeList/: index.html
NamedThing/: index.html
Ncname/: index.html
NodeCategoryEnum/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PersonStatus/: index.html
PredicateEnum/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
UnionedEdge/: index.html
UnionedNode/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
agent_type/: index.html
aggregator_knowledge_source/: index.html
all_categories/: index.html
anatomical/: index.html
attribute_type/: index.html
birth_date/: index.html
category/: index.html
category_class/: index.html
crossreferences/: index.html
id/: index.html
(+157 files in other folders)
