[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "matrix_schema"
version = "0.0.0"
description = "The collected MATRIX schemas"
authors = ["Nicolas Matentzoglu <nicolas.matentzoglu@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "matrix_schema", from = "src"}]
include = ["README.md", "src/matrix_schema/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.8.0"
biolink-model = ">=4.2.5,<5.0.0"

[tool.poetry.group.docs.dependencies]
jinjanator = ">=24.4.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.5.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
schemasheets = ">=0.1.14"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"
pandas = ">=2,<3"
jinjanator = ">=24.4.0"
pytest = ">=6.0"
pandera = {version = ">=0.15", extras = ["pyspark"]}
pyspark = "3.5.1"

